fix(landing): push hero circles right on mobile/tablet to reduce text overlap
Ref #3

--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -72,8 +72,8 @@
         width: 650px;
         height: 650px;
         top: -150px;
-        right: -60px;
-        clip-path: inset(0 35% 0 0);
+        right: -250px;
+        clip-path: none;
     }
 }
 
@@ -88,8 +88,8 @@
         width: 500px;
         height: 500px;
         top: -100px;
-        right: -80px;
-        clip-path: inset(0 45% 0 0);
+        right: -300px;
+        clip-path: none;
     }
 }
 
